<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="250dp"
        android:layout_height="300dp">

        <EditText
            android:id="@+id/student_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="16"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:inputType="text"
            android:hint="@string/student_surname" />

        <EditText
            android:id="@+id/student_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="16"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="75dp"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ-, "
            android:hint="@string/student_name" />

        <EditText
            android:id="@+id/student_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="16"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="135dp"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:hint="@string/student_id" />

        <EditText
            android:id="@+id/student_gpa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="16"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="195dp"
            android:inputType="numberDecimal"
            android:hint="@string/student_gpa" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/save_button"
            android:text="@string/save"
            android:textSize="14sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="140dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_button"
            android:text="@string/cancel"
            android:textSize="14sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"/>

    </RelativeLayout>

</RelativeLayout>